--- a/src/app/pages/formerprofile/formerprofile.component.html
+++ b/src/app/pages/formerprofile/formerprofile.component.html
@@ -1,130 +1,58 @@
-
-
-
-
-<section class="course" style="padding-top: 60px;">
+<mat-card style="height:500px;margin-top: 60px;
+width: 100%; background-image: url(../../../assets/img/wp.webp );" >
+<div  style="display: flex; align-items: center; justify-content: center;" >
+                        
+                    
+    <img src="../../../assets/img/use1.png" width="100%" class="gha" >
     
-    <div class=" row">
-        <div class="row mt-5 col-lg-4 " style="background-color: aliceblue;   " >
-            
-            <div class="col-lg-12  mt-5 "  >
-                <div class="box shadow-sm ml-3" >
-                    <div class="row" style="display: flex; align-items: center; justify-content: center;" >
-                    <div class="col-lg-4" style="display: flex; align-items: center; justify-content: center;" >
-                        
-                    
-                        <img src="../../../assets/img/user3.png" width="100%" class="gha" >
-                        
-                        
-                    
-                    </div>
-                    
-                    <div class="col-lg-12" style="padding-left: 2cm;">
-                       
-                    
-                    <br>
-                    
-                    
-                    
-                     </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12 mt-2 mb-2 mr-1">
-                            <label >First Name </label>
-                            <input name="studentFirstName"   type="text" class="form-control"  >
-                        </div>
-                        <div class="col-lg-12 mt-2 mb-2">
-                            <label >Last Name </label>
-                            <input name="studentLastName"   type="text" class="form-control"  >
-                        </div>
-                        <div class="col-lg-12 mt-2 mb-2">
-                            <label >Email </label>
-                            <input name="studentEmail"   type="email" class="form-control"  >
-                        </div>
-                        
-                      
-                    <div class="col-lg-12 mt-2 mb-2">
-                        <label >Adress </label>
-                      <input name="studentAdress"    type="text" class="form-control"  >
-                    </div>
-                        
-                      <div class="col-lg-6 mt-2 mb-2">
-                        <label >Telephone Number </label>
-                      <input name="studentTelephoneNumber"   type="number" class="form-control"  >
-                  </div>
-                  <div class="col-lg-6 mt-2 mb-2 ">
-                        <label >Country </label>
-                      <input name="studentCountry"   type="text" class="form-control"  >
-                    </div>
-                    <div class="col-lg-6 mt-2 mb-2">
-                        <label >City </label>
-                      <input name="studentCity"   type="text" class="form-control"  >
-                    </div>
-                    <div class="col-lg-6 mt-2 mb-2">
-                        <label >Postal Code <Code></Code></label>
-                      <input name="studentPostalCode"    type="number" class="form-control"  >
-                    </div>
-                    
-                        
-                        
-                      
-                       
-                        
-              
-              
-                    </div>
-                    <div class="col-lg-12" style="display: flex; align-items: center; justify-content: center;">
-                   
-                        <button class="btn btn-dark btn-sm mt-2" routerLink="updateformerprofile" >Modify information <i class="bi bi-pencil"></i> </button>
-                    </div>                
-                    </div>
     
-            </div>
-            <div class="col-lg-12  " >
-                <div class="box shadow-sm ml-3" style="background-image: url(../../../assets/img/centerr2.jpg);">
-                    <div class="row mt-4">
-                    <div class="col-lg-12">
-                    <p class="mt-4 text-center" style="font-weight: bold;">Do you want to work in a training center?</p>
-                    <br>
-                    </div>
-                    <div class="col-lg-12" style="display: flex; align-items: center; justify-content: center;">
-                    
-                    <button class="btn btn-dark btn-sm mt-2" routerLink="courses" style="display: flex; align-items: center; justify-content: center;"> find a job now <i class="bi bi-hand-index-thumb"></i></button>
-                    </div>
-                    </div>
-                </div>
-    
-            </div>
-        </div>
+
+</div>
+<mat-card class="shadow-lg" style="background-color: #f6f6f6; margin-top: 220px;
+width: 80%; margin-right:auto;margin-left:auto;">
+    <div class="row">
         
+        <div class="col-lg-8">
+ <h2 style="  color:black; opacity: 65%;" >          
     
-        <div class="row mt-5 col-lg-8 " style="background-color: aliceblue; " >
-            <h4 class="text-center" style="text-decoration: underline; padding-bottom: 1cm; padding-left: 1cm; font-weight: bold; ">NOTIFICATIONS<i class="bi bi-bell"></i></h4> 
-            
-            <div class="col-lg-12 mb-5 " *ngFor="let cs of course">
-                <div class="box shadow-sm ml-3">
-                    <div class="row">
-                    <div class="col-lg-4">
-                    <img srcset="{{cs.image}}" width="100%" class="gha">
-                    </div>
-                    <div class="col-lg-8">
-                    <p class="mt-2" style="font-weight: bold;">{{cs.name}}</p>
-                    <h6 class="mt-2" >{{cs.firstname}}</h6>
-                    <p clas="mt-2" style="color: dimgrey; font-size: small;">{{cs.description}}</p>
-                
-                    <button class="btn btn-dark btn-sm mt-2" >Read message <i class="bi bi-envelope"></i> </button>
-                    </div>
-                    </div>
-                </div>
-    
-            </div>
+    Tell us more about yourself, to benefit from personalized
+ learning with lesson recommendations
+ </h2> 
         </div>
-    
-    
+        <div class="col-lg-4" style="display: flex;align-items: center;align-self: center;">
+            <button mat-raised-button color="primary" style="width: 300px;
+            line-height: 48px; padding-left: none; " routerLink="updateformerprofile"><mat-icon>create</mat-icon> Update profile </button>
+        </div>
+
     </div>
-</section>
+</mat-card>
+
+</mat-card>
+
+<mat-card class="shadow-lg" style="background-color: #f6f6f6; margin-top: 220px;
+width: 80%; margin-right:auto;margin-left:auto; display: flex; align-items: center; align-self: center;">
+   <div class="row " style="display: flex;align-items: center;align-self: center;">
+   
+   <h2  style=" opacity: 65%; color: black; font-size:30px;">Invite your friends to find either a course or a job on<span style="color: #261d51; font-family: cursive; font-weight: bold;"> Welearn </span>for free </h2>
+
+   <div class="col-lg-12 mt-3 mb-3 text-center" style="display: flex; align-items: center; align-self: center; ">
+    <a href="#" target="_blank" style="margin: auto; color:#261d51;"><i class="bi bi-facebook fa-4x"></i></a>
+    <a href="#" target="_blank" style="margin: auto; color:#261d51;"><i class="bi bi-whatsapp fa-4x"></i></a>
+    <a href="#" target="_blank" style="margin: auto; color:#261d51;"><i class="bi bi-instagram fa-4x"></i></a>
+    <a href="#" target="_blank" style="margin: auto; color:#261d51;"><i class="bi bi-youtube fa-4x"></i></a>
+</div>
+<div class="col-lg-12 text-center" style=" margin: auto;">
+    
+    <textarea id="clipboard-example-textarea" cols="30" rows="10" [(ngModel)]="value" style="
+     height: 20px; margin-top: 40px; margin-left: auto;margin-right: auto;"></textarea>
+     <span><br></span>
+   
+   <button mat-raised-button [cdkCopyToClipboard]="value" style="line-height: 20px; "><mat-icon>link</mat-icon></button>
+   
+</div>
+</div>
+
+</mat-card>
 
 
-
-
-
+<!--[cdkCopyToClipboard]="value"-->
