--- a/src/app/pages/home-student/home-student.component.css
+++ b/src/app/pages/home-student/home-student.component.css
@@ -10,42 +10,37 @@
   --scrollBar: #656768;
 }
 
-
-
-
-
-
-
-
-
-.sideBar::-webkit-scrollbar {
-  width: 10px;
+ng-sidebar-container{
+  height: 100vh;
 }
 
-.sideBar::-webkit-scrollbar-track {
-  background: var(--background);
+.example-container {
+  width: 100%;
+  height: 100%;
+  background-color:#f4f4f4 ;
 }
 
-.sideBar::-webkit-scrollbar-track:hover {
-  background: var(--white1);
+.example-sidenav-content {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  background-color: aliceblue;
 }
 
-.sideBar:hover::-webkit-scrollbar-thumb {
-  background: var(--scrollBar);
-  border-radius: 5px;
+.example-sidenav {
+  padding-bottom: 0%;
+  background-color: #fff;
+  
+  padding-top: 50px;
+  box-shadow:0 0 2.5em rgba(85, 85, 85, 0.5);
 }
 
-.sideBar:hover {
-  scrollbar-color: var(--white1) var(--background);
-}
 
-.left {
-  padding-top: 70px;
-}
 
-.left:hover .mainTitle a {
-  visibility: visible;
-}
+
+
+
 
 
 .globalProfile {
@@ -813,101 +808,3 @@ img{
   background:var(--primary-color);
   
 }
-
-/*
-.hero-section{
-  align-items: flex-start;
-  
-  display: flex;
-  min-height: 100%;
-  justify-content: center;
-  padding: var(--spacing-xxl) var(--spacing-l);
-}
-
-.card-grid{
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-column-gap: var(--spacing-l);
-  grid-row-gap: var(--spacing-l);
-  max-width: var(--width-container);
-  width: 100%;
-}
-
-@media(min-width: 540px){
-  .card-grid{
-    grid-template-columns: repeat(2, 1fr); 
-  }
-}
-
-@media(min-width: 960px){
-  .card-grid{
-    grid-template-columns: repeat(4, 1fr); 
-  }
-}
-
-.card{
-  list-style: none;
-  position: relative;
-}
-
-.card:before{
-  content: '';
-  display: block;
-  padding-bottom: 150%;
-  width: 100%;
-}
-
-.card__background{
-  background-size: cover;
-  background-position: center;
-  border-radius: var(--spacing-l);
-  bottom: 0;
-  filter: brightness(0.75) saturate(1.2) contrast(0.85);
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  transform-origin: center;
-  trsnsform: scale(1) translateZ(0);
-  transition: 
-    filter 200ms linear,
-    transform 200ms linear;
-}
-
-.card:hover .card__background{
-  transform: scale(1.05) translateZ(0);
-}
-
-.card-grid:hover > .card:not(:hover) .card__background{
-  filter: brightness(0.5) saturate(0) contrast(1.2) blur(20px);
-}
-
-.card__content{
-  left: 0;
-  padding: var(--spacing-l);
-  position: absolute;
-  top: 0;
-}
-
-.card__category{
-  color: var(--text-light);
-  font-size: 0.9rem;
-  margin-bottom: var(--spacing-s);
-  text-transform: uppercase;
-}
-
-.card__heading{
-  color: var(--text-lighter);
-  font-size: 1.9rem;
-  text-shadow: 2px 2px 20px rgba(0,0,0,0.2);
-  line-height: 1.4;
-  word-spacing: 100vw;
-}
-.example-box.cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.example-chip .cdk-drop-list-dragging {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-*/
