--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
 <section class="home" style="padding-top: 60px;">
     <img src="../../../assets/img/back.jpg">
     
-    <div class="homecontent"  >
+    <div class="homecontent" style="padding-top: 5px;" >
     <h1>Start Learning For  Future bright</h1>
     <button routerLink="courses"  class="bv2" >Discover Courses</button> &nbsp;
     <button routerLink="thirdof" class="bv"  >Join Now</button>
@@ -21,7 +21,7 @@
             <div style="background-color:#eeeeee " class="stepBox">
   
   
-               <i class="bi bi-calendar-check-fill" style="color:var(--primary-color) "><h5>2k+<br/>cursos</h5></i>
+               <i class="bi bi-calendar-check-fill" style="color:var(--primary-color) "><h2 style="color: #261d51;">{{count}}<br/>cursos</h2></i>
   
              </div>
           </div>
@@ -32,7 +32,7 @@
           <div class="col-sm mt-2 mb-2 ">
             <div style="background-color: #eeeeee " class="stepBox">
   
-              <i class="bi bi-briefcase-fill" style="color: var(--primary-color)"><h5>600+<br/>expert tutors</h5></i>
+              <i class="bi bi-people" style="color: var(--primary-color)"><h2 style="color: #261d51;">{{countFormer}}<br/>expert formers</h2></i>
   
             </div>
           </div>
@@ -44,7 +44,7 @@
           <div style="background-color: #eeeeee " class="stepBox">
   
   
-            <i class="bi bi-people" style="color:var(--primary-color)"><h5>60k+<br/>students</h5></i>
+            <i class="bi bi-people" style="color:var(--primary-color)"><h2 style="color: #261d51;">{{countStudent}}<br/>students</h2></i>
   
   
           </div>
@@ -57,7 +57,7 @@
           <div style="background-color: #eeeeee " class="stepBox">
   
   
-            <i class="bi bi-patch-check-fill" style="color: var(--primary-color)"><h5>6k+<br/>certified cursos</h5></i>
+            <i class="bi bi-patch-check-fill" style="color: var(--primary-color)"><h2 style="color: #261d51;">{{countCenter}}<br/>Centers</h2></i>
   
   
           </div>
@@ -72,25 +72,21 @@
         <h1 class="text-center"><span class="highlight">certified and starred</span> teachers</h1>
         <section style="padding-top: 1em" >
           <div class="row ">
-            <div class="col-sm mt-2 mb-2">
-      
+           <div class="col-md-4" *ngFor="let f of formers">
               <div class="swiper-slide card hh">
                 <div class="card-content">
                   <div class="image">
-                    <img src="../../../assets/img/img2.jpg" alt="">
+                    <img  srcset="data:image/png;base64,{{f[1]}}" alt="">
                   </div>
-      
                   <div class="media-icons">
                     <i class="bi bi-facebook"></i>
                     <i class="bi bi-twitter"></i>
                     <i class="bi bi-github"></i>
                   </div>
-      
                   <div class="name-profession">
-                    <span class="name">Someone Name</span>
-                    <span class="profession">Web Developer</span>
+                    <span class="name">{{f[2]}}</span><br>
+                    <span class="profession">{{f[0]}}</span>
                   </div>
-      
                   <div class="rating">
                     <i class="bi bi-star-fill"></i>
                     <i class="bi bi-star-fill"></i>
@@ -98,93 +94,17 @@
                     <i class="bi bi-star"></i>
                     <i class="bi bi-star"></i>
                   </div>
-      
                   <div class="button">
-                    <button class="aboutMe">About Me</button>
+                    <button class="aboutMe" routerLink="afficheprofile">About Me</button>
                     <button class="hireMe">Hire Me</button>
                   </div>
                 </div>
               </div>
-            </div>
-      
-      
-      
-      
-            <div class="col-sm mt-2 mb-2">
-              <div class="swiper-slide card">
-                <div class="card-content">
-                  <div class="image">
-                    <img src="../../../assets/img/img1.jpg" alt="">
-                  </div>
-      
-                  <div class="media-icons">
-                    <i class="bi bi-facebook"></i>
-                    <i class="bi bi-twitter"></i>
-                    <i class="bi bi-github"></i>
-                  </div>
-      
-                  <div class="name-profession">
-                    <span class="name">Someone Name</span>
-                    <span class="profession">Web Developer</span>
-                  </div>
-      
-                  <div class="rating">
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star"></i>
-                    <i class="bi bi-star"></i>
-                  </div>
-      
-                  <div class="button">
-                    <button class="aboutMe">About Me</button>
-                    <button class="hireMe">Hire Me</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-      
-      
-      
-      
-            <div class="col-sm mt-2 mb-2">
-              <div class="swiper-slide card">
-                <div class="card-content">
-                  <div class="image">
-                    <img src="../../../assets/img/img3.jpg" alt="">
-                  </div>
-      
-                  <div class="media-icons">
-                    <i class="bi bi-facebook"></i>
-                    <i class="bi bi-twitter"></i>
-                    <i class="bi bi-github"></i>
-                  </div>
-      
-                  <div class="name-profession">
-                    <span class="name">Someone Name</span>
-                    <span class="profession">Web Developer</span>
-                  </div>
-      
-                  <div class="rating">
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star"></i>
-                    <i class="bi bi-star"></i>
-                  </div>
-      
-                  <div class="button">
-                    <button class="aboutMe">About Me</button>
-                    <button class="hireMe">Hire Me</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-      
           </div>
+        </div>
         </section>
       
-        <section style="padding-top: 1em" >
+      <!--- <section style="padding-top: 1em" >
         <div class="row ">
           <div class="col-sm mt-2 mb-2">
       
@@ -296,7 +216,7 @@
           </div>
       
         </div>
-        </section>
+        </section>-->
     </div>    
     
     
