--- a/src/app/pages/updateprofile/updateprofile.component.html
+++ b/src/app/pages/updateprofile/updateprofile.component.html
@@ -4,24 +4,26 @@
             <div class="col-md-8 mt-2 ml-5" >
                 <div class="card  mr-4" style="border-radius: 20px; ">
                     <div class="header" style="background-color: #f6f6f6; border-top-left-radius: 20px; border-top-right-radius: 20px;">
-                        <h4 class="title text-center">Edit Profile</h4>
+                        <h4 class="title text-center">Edit Profile </h4>
                     </div>
-                    <div class="content">
-                        <form>
+                    
+                    <div class="content" *ngFor="let u of user" >
+                        <form >
                             <div class="row">
                                 
-                                <div class="col-md-6"  >
+                                <div class="col-md-6" >
                                     <div class="form-group" style="padding-right: 10px; padding-left: 20px; padding-top: 20px;">
                                         <label>Username</label>
-                                        <input type="text" class="form-control" placeholder="Username" value="{{serviceAuthStudent?.loggedUser}}">
+                                        <input type="text" class="form-control" placeholder="Username" value="{{studentAuthService?.loggedUser}}">
                                     </div>
                                 </div>
                                 <div class="col-md-6" >
                                     <div class="form-group" style="padding-right: 10px; padding-left: 10px; padding-top: 20px;">
                                         <label>Full Name</label>
-                                        <input type="text" class="form-control" placeholder="Company" value="{{serviceAuthStudent?.loggedFullName}}">
+                                        <input type="text" class="form-control" placeholder="Company" value="{{u.userFullName}}">
                                     </div>
                                 </div>
+                               
                                
                                 
                             </div>
@@ -30,45 +32,45 @@
                                 
                                 <div class="col-md-12" style="padding-right: 20px; padding-left: 20px; padding-top: 20px;">
                                     <div class="form-group">
-                                        <label for="exampleInputEmail1">Email address</label>
-                                        <input type="email" class="form-control" placeholder="Email" value="{{serviceAuthStudent?.loggedEmail}}">
+                                        <label for="exampleInputEmail1">Email</label>
+                                        <input type="email" class="form-control" value="{{u.userEmail}}">
                                     </div>
                                 </div>
-
+                                
+                                
 
 
 
                             </div>
-
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group" style="padding-right: 20px; padding-left: 20px; padding-top: 20px;">
                                         <label>Address</label>
-                                        <input type="text" class="form-control" placeholder="Home Address" value="{{serviceAuthStudent?.loggedAddress}}" >
+                                        <input type="text" class="form-control" placeholder="Home Address"  value="{{u.userAddress}}">
                                     </div>
                                 </div>
+
                             </div>
 
+                           
+
+                            
                             <div class="row">
-                                <div class="col-md-4">
+                                <div class="col-md-6">
                                     <div class="form-group" style="padding-right: 10px; padding-left: 20px; padding-top: 20px;">
                                         <label>City</label>
-                                        <input type="text" class="form-control" placeholder="City"value="{{serviceAuthStudent?.loggedCity}}">
+                                        <input type="text" class="form-control" placeholder="City" value="{{u.userCity}}">
                                     </div>
                                 </div>
-                                <div class="col-md-4">
-                                    <div class="form-group" style="padding-right: 10px; padding-left: 10px; padding-top: 20px;">
-                                        <label>Country</label>
-                                        <input type="text" class="form-control" placeholder="Country" value="Tunisia">
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
+                               
+                                <div class="col-md-6">
                                     <div class="form-group" style="padding-right: 20px; padding-left: 10px;padding-top: 20px;">
                                         <label>Postal Code</label>
-                                        <input type="number" class="form-control" placeholder="ZIP Code" value="{{serviceAuthStudent?.loggedPostalCode}}" >
+                                        <input type="number" class="form-control" placeholder="ZIP Code" value="{{u.userPostalCode}}">
                                     </div>
                                 </div>
                             </div>
+                          
 
                             <div style="display: flex; align-items: center; justify-content: center;">
                             <button  mat-raised-button style=" color:#261d51;font-weight: bold 
@@ -79,48 +81,16 @@
                     </div>
                 </div>
             </div>
+           
 
-
-            <!--<div class="col-md-4">
-                <div class="card card-user">
-                    <div class="image">
-                       
-                        <img src="https://ununsplash.imgix.net/photo-1431578500526-4d9613015464?fit=crop&fm=jpg&h=300&q=75&w=400" alt="..."/>
-                        
-                    </div>
-                    <img class="avatar border-gray gha" src="../../../assets/img/img5.jpg" alt="..."/>
-
-                    <div class="content">
-                        <div class="author">
-                            <a href="#">
-                                
-                                <h4 class="title">Mike Andrew<br />
-                                    <small>michael24</small>
-                                </h4>
-                            </a>
-                        </div>
-                        <p class="description text-center"> "Lamborghini Mercy <br>
-                            Your chick she so thirsty <br>
-                            I'm in that two seat Lambo"
-                        </p>
-                    </div>
-                    <hr>
-                    <div class="text-center">
-                        <button href="#" class="btn btn-simple"><i class="fa fa-facebook-square"></i></button>
-                        <button href="#" class="btn btn-simple"><i class="fa fa-twitter"></i></button>
-                        <button href="#" class="btn btn-simple"><i class="fa fa-google-plus-square"></i></button>
-                    </div>
-                </div>
-            </div>
-        
-        -->
+           
         <div class="col-md-3 mt-2 " style="background-color: #f6f6f6; border-radius: 20px;" >
             <div class="box shadow-sm "  style="background-image:url(https://ununsplash.imgix.net/photo-1431578500526-4d9613015464?fit=crop&fm=jpg&h=300&q=75&w=400) ; border-bottom-left-radius: 0; border-bottom-right-radius: 0;">
                 <div class="row">
                 <div class="col-lg-12" style="display: flex; align-items: center; justify-content: center; "  >
                     
                 
-                    <img src="../../../assets/img/img3.jpg" width="100%" class="gha" >
+                    <img src="../../../assets/img/use1.png" width="100%" class="gha" >
                     
                     
                 
@@ -135,11 +105,11 @@
 
         
             </div>
-            <div class="row">
+            <div class="row" *ngFor="let u of user">
                 <div class="col-md-12">
                     <div class="form-group">
-                        <h2 class="title text-center" style="font-weight: bold; color: #261d51 ;">{{serviceAuthStudent?.loggedFullName}}</h2>
-                        <h3 class="text-center" style="font-weight: bold; color: #261d51 ;" >{{serviceAuthStudent?.loggedUser}}</h3>
+                        <h2 class="title text-center" style="font-weight: bold; color: #261d51 ;">{{u.userFullName}}</h2>
+                        <h3 class="text-center" style="font-weight: bold; color: #261d51 ;" >{{studentAuthService?.loggedUser}} </h3>
                        
                         <h4 class="text-center" style="color: lightslategray;">Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.</h4>
                    <br>
@@ -165,4 +135,4 @@
 
 
 
-</div>
+
