--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -32,7 +32,7 @@
     <br>-->
    
    <div class="container">
-    <h1 class="text-center " style="color: darkslategray;" ><strong>all Categories</strong> </h1>
+    <h1 class="text-center " style="color: darkslategray;" ><strong>All Categories</strong> </h1>
         <div class="row mt-5" >
             <div class="col-lg-3 mb-5" *ngFor="let c of course"  >
                 <div class="cover" style="height: 150px;" routerLink="{{c.linkpage}}">
