--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
 <section class="home" style="padding-top: 60px;">
     <img src="../../../assets/img/back.jpg">
     
-    <div class="homecontent" style="padding-top: 5px;" >
+    <div class="homecontent" style="padding-top: 27%;" >
     <h1>Start Learning For  Future bright</h1>
     <button routerLink="courses"  class="bv2" >Discover Courses</button> &nbsp;
     <button routerLink="thirdof" class="bv"  >Join Now</button>
