--- a/src/app/pages/affiche-profile/affiche-profile.component.html
+++ b/src/app/pages/affiche-profile/affiche-profile.component.html
@@ -1,24 +1,21 @@
 
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+ <!---- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!------ Include the above in your HEAD tag ---------->
-  <div class="prin conatiner " style="padding-top: 50px;padding-bottom: 50px;">
-  <div class="container emp-profile">
+  <div class="prin conatiner " style="padding-top: 50px;padding-bottom: 50px;" *ngFor="let f of infosU" >
+  <div class="container emp-profile"    >
               <form method="post">
                   <div class="row">
                       <div class="col-md-4">
   
                           <div class="profile-img">
-                              <img  src="../../../assets/img/img3.jpg" alt=""/>
+                              <img   srcset="data:image/png;base64,{{picture}}"/>
                               
                           </div>
                       </div>
                       <div class="col-md-6">
                           <div class="profile-head">
-                                      <h5>
-                                          Mehdi njema
-                                      </h5>
+                                      <h5> {{f.userFullName}}</h5>
                                       <h6>
                                           Web Developer and Designer
                                       </h6>
@@ -42,24 +39,23 @@
                              
                           </div>
                       </div>
-                      <div class="col-md-8">
+                      <div class="col-md-8" *ngFor="let c of infosC" >
                           <div class="tab-content profile-tab" id="myTabContent">
-                              <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                              <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab" >
                                           <div class="row">
                                               <div class="col-md-6">
-                                                  <label>User Id</label>
+                                                  <label>User Name</label>
                                               </div>
                                               <div class="col-md-6">
-                                                  <p>mehdi123</p>
+                                                  <p>{{f.userName}}</p>
                                               </div>
                                           </div>
                                           <div class="row">
                                               <div class="col-md-6">
-                                                  <label>Name</label>
+                                                  <label>Full Name</label>
                                               </div>
                                               <div class="col-md-6">
-                                                  <p>
-                                                    Mehdi njema</p>
+                                                  <p>{{f.userFullName}}</p>
                                               </div>
                                           </div>
                                           <div class="row">
@@ -67,15 +63,23 @@
                                                   <label>Email</label>
                                               </div>
                                               <div class="col-md-6">
-                                                  <p>mehdinj@gmail.com</p>
+                                                  <p>{{user.formerEmail}}</p>
                                               </div>
                                           </div>
+                                          <div class="row">
+                                            <div class="col-md-6">
+                                                <label>Course Name</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>{{user.courseName}}</p>
+                                            </div>
+                                        </div>
                                           <div class="row">
                                               <div class="col-md-6">
                                                   <label>Phone</label>
                                               </div>
                                               <div class="col-md-6">
-                                                  <p>55958955</p>
+                                                  <p>{{c.phoneNumber}}</p>
                                               </div>
                                           </div>
                                           <div class="row">
@@ -93,7 +97,7 @@
                                                   <label>Experience</label>
                                               </div>
                                               <div class="col-md-6">
-                                                  <p>Expert</p>
+                                                  <p>{{f.userExperience}}</p>
                                               </div>
                                           </div>
                                           <div class="row">
@@ -101,7 +105,7 @@
                                                 <label>Level</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>Bac</p>
+                                                <p>{{f.userLevel}}</p>
                                             </div>
                                         </div>
                                           <div class="row">
@@ -129,5 +133,164 @@
                   </div>
               </form>           
           </div>
+        </div>--->
+  <!----------------------------------------------------------------------------------------->
+  <div class="profile-page"  *ngFor="let f of infosU">
+    <div class="main main-raised" style="margin-top:160px;">
+        <div class="profile-content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 ml-auto mr-auto">
+                       <div class="profile">
+                            <div class="avatar">
+                                <img srcset="data:image/png;base64,{{picture}}" alt="Circle Image" class="img-raised rounded-circle img-fluid">
+
+                            </div>
+                            <div class="name" >
+                                <h2 class="title"> {{f.userFullName}}</h2>
+                                <h3>Web Developer</h3>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="description text-center">
+                    <p>An artist of considerable range, Chet Faker — the name taken by Melbourne-raised, Brooklyn-based Nick Murphy — writes, performs and records all of his own music, giving it a warm, intimate feel with a solid groove structure. </p>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 ml-auto mr-auto">
+                        <div class="profile-tabs">
+                          <ul class="nav nav-pills nav-pills-icons " role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#person" role="tab" data-toggle="tab">
+                                  <i class="material-icons">person</i>
+                                  Informations
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#contact" role="tab" data-toggle="tab">
+                                  <i class="material-icons">perm_contact_calendar</i>
+                                    Contact
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#favorite" role="tab" data-toggle="tab">
+                                  <i class="material-icons">place</i>
+                                    Place
+                                </a>
+                            </li>
+                          </ul>
+                        </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12"><hr></div>
+                </div>
+                
+            </div>
+        
+          <div class="tab-content tab-space">
+            <div class="tab-pane active " id="person">
+                <div class="row  " >
+                    <div class="col-md-6 ">
+                        <label>User Name</label>
+                    </div>
+                    <div class="col-md-6 ">
+                        <p>{{f.userName}}</p>
+                    </div>
+                </div>
+                <div class="row  " >
+                    <div class="col-md-6 ">
+                        <label>Full Name</label>
+                    </div>
+                    <div class="col-md-6 ">
+                        <p>{{f.userFullName}}</p>
+                    </div>
+                </div>
+                
+                <div class="row">
+                    <div class="col-md-6">
+                        <label>Profession</label>
+                    </div>
+                    <div class="col-md-6">
+                        <p>Web Developer </p>
+                    </div>
+                </div>
+                
+                <div class="row">
+                    <div class="col-md-6">
+                        <label>Experience</label>
+                    </div>
+                    <div class="col-md-6">
+                        <p>{{f.userExperience}}</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <label>Level</label>
+                    </div>
+                    <div class="col-md-6">
+                        <p>{{f.userLevel}}</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <label>Hourly Rate</label>
+                    </div>
+                    <div class="col-md-6">
+                        <p>10$/hr</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <label>Total Projects</label>
+                    </div>
+                    <div class="col-md-6">
+                        <p>230</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <label>English Level</label>
+                    </div>
+                    <div class="col-md-6">
+                        <p>Expert</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <label>Availability</label>
+                    </div>
+                    <div class="col-md-6">
+                        <p>6 months</p>
+                    </div>
+                </div>
+              </div>
+            <div class="tab-pane " id="contact" >
+                <div class="row">
+                    <div class="col-md-6">
+                        <label>Email</label>
+                    </div>
+                    <div class="col-md-6">
+                        <p>{{f.userEmail}}</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <label>Phone</label>
+                    </div>
+                    <div class="col-md-6">
+                        <p>{{f.userTelephoneNumber}}</p>
+                    </div>
+                </div>
+              </div>
+            <div class="tab-pane text-center gallery" id="favorite">
+                  <div class="row">
+                  </div>
+              </div>
+          </div>
+    
+        
+            </div>
         </div>
-  
+    </div>
+    </div>
+    
