--- a/src/app/pages/city/city.component.html
+++ b/src/app/pages/city/city.component.html
@@ -1,7 +1,7 @@
 <section class="course" style="padding-top: 80px;">
   
     <div class="container">
-      <h1 class="text-center"><strong>All My Favorites</strong></h1>
+      <h1 class="text-center"><strong>All {{City}} Courses</strong></h1>
         
         <div class="row mt-5" >
             <div class="col-lg-4 mb-5" *ngFor="let c of courses">
