--- a/src/app/pages/home-center/home-center.component.html
+++ b/src/app/pages/home-center/home-center.component.html
@@ -1,1 +1,193 @@
-<p>home-center works!</p>
+
+<nav class="menu" tabindex="0" style="padding-top: 60px;">
+	<div class="smartphone-menu-trigger" ></div>
+  <header class="avatar">
+		<img  src="../../../assets/img/img3.jpg" />
+    <h2>{{centerAuthService.loggedUser}}</h2>
+  </header>
+	<ul>
+    <li tabindex="0" class="icon-messages"><span style="font-size: medium; color: #261d51; font-weight: bold;padding-left: 10px;">Messages</span></li>
+    <li tabindex="0" class="icon-teams"><span style="font-size: medium; color: #261d51;font-weight:bold;padding-left: 10px;">Teams</span></li>
+    <li tabindex="0" class="icon-prof" ><span style="font-size: medium; color: #261d51;font-weight:bold;padding-left: 10px;">Prof</span></li>
+    <li tabindex="0" class="icon-add" data-toggle="modal" data-target="#exampleModal" ><span style="font-size: medium; color: #261d51;font-weight:bold;padding-left: 10px;">Post add</span></li>
+    <li tabindex="0" class="icon-add" data-toggle="modal" data-target="#example2Modal" ><span style="font-size: medium; color: #261d51;font-weight:bold;padding-left: 10px;">Post announcement</span></li>
+
+  </ul>
+
+</nav>
+
+<main style="background-color: #fafafa;margin-left: 243px; padding-top: 20px;">
+  <div class="modal fade m-auto shadow-lg" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered " role="document" style="margin: auto; ">
+      <div class="modal-content" style="padding-top: 15px;">
+        <div class="modal-header " style="align-items: center; align-self: center; display: flex;" >
+            <h1 class="modal-title " id="modal-basic-title" style="font-family: cursive; opacity: 80%;" >Upload Courses</h1>
+
+           </div>
+          
+           
+          <div class="modal-body" style="margin: 20px;" >
+            <div class="alert alert-success" *ngIf='message==1'   >You have successfully added</div>
+
+            <form   [formGroup]="courseForm">
+              <div class="row justify-content-between text-left">
+                  <div class="form-group col-sm-6 flex-column d-flex" style="padding-top: 5px;"> 
+                    <label class="form-control-label px-3">Former name<span class="text-danger"> *</span></label>
+                    <input type="text" name="" id="" formControlName="formerName" class="form-control">
+                    </div>
+                  <div class="form-group col-sm-6 flex-column d-flex"> 
+                    <label class="form-control-label px-3">Center name<span class="text-danger"> *</span></label> 
+                    <input type="text" name="" id="" formControlName="centereName" class="form-control">                  </div>
+              </div>
+              <div class="row justify-content-between text-left">
+                  <div class="form-group col-sm-6 flex-column d-flex" > 
+                    <label class="form-control-label px-3">Center email<span class="text-danger"> *</span></label> 
+                    <input type="email" name="" id="" ngModel="{{centerAuthService.loggedEmail}}" formControlName="centerEmail" class="form-control">                  
+              </div>
+                  <div class="form-group col-sm-6 flex-column d-flex"> 
+                    <label class="form-control-label px-3">Phone number<span class="text-danger"> *</span></label> 
+                    <input type="number" name="" id="" ngModel="{{centerAuthService.loggedTelephoneNumber}}" formControlName="phoneNumber" class="form-control">                   </div>
+              </div>
+              
+              <div class="row justify-content-between text-left">
+                <div class="form-group col-sm-6 flex-column d-flex" >
+                   <label class="form-control-label px-3">City<span class="text-danger"> *</span></label>
+                   <input type="text" name="" id="" formControlName="city" class="form-control">  
+               </div>
+                <div class="form-group col-sm-6 flex-column d-flex"> 
+                  <label class="form-control-label px-3">Price<span class="text-danger"> *</span></label>  
+                  <input type="number" name="" id="" formControlName="price" class="form-control">                </div>
+            </div>
+            <div class="row justify-content-between text-left">
+              <div class="form-group col-sm-6 flex-column d-flex"> 
+                <label class="form-control-label px-3">Course name<span class="text-danger"> *</span></label> 
+                <input type="text" name="" id="" formControlName="courseName" class="form-control">             
+               </div>
+               <div class="form-group col-sm-6 flex-column d-flex"> 
+                <label for ="category"class="form-control-label px-3" >Category<span class="text-danger"> *</span></label>
+
+                <select class="form-control"  name="category" formControlName="category"  style="border-radius: 20px; border-color: darkgray;" >
+                  <option value=""></option>
+                  <option value="Mathématique" >Maths</option>
+                  <option value="Physics">Physics</option>
+                  <option value="Languages">Languages</option>
+                  <option value="Computer Sciencee">Computer Science</option>
+                  <option value="Dance">Dance</option>
+                  <option value="Music">Music</option>
+                  <option value="Sports">Sports</option>
+                  <option value="Chemistry">Chemistry</option>
+              </select >    
+
+               </div>
+          </div>
+          
+          <label for ="category"class="form-control-label px-3" >Description<span class="text-danger"> *</span></label>
+
+          <textarea name="" id="" class="form-control" style="height: 108px; border-radius: 20px;"></textarea>
+  
+          </form>
+                </div>
+          
+          <div class="modal-footer" style="padding-top: 15px; align-self: center; align-items: center;
+          display: flex; padding-bottom: 5px;">
+          <div class="row justify-content-end">
+            <button type="submit" data-dismiss="modal" class="btn-block btn-info"style="border-radius: 20px;">close</button> 
+        </div>
+          <div class="row justify-content-end">
+             <button type="submit" class="btn-block btn-success" style="border-radius: 20px;"  (click)="fnAdd()  " >Add</button> 
+        </div>
+        
+            
+         
+          
+             </div>
+            
+      </div>
+    </div>
+  </div>
+  <div class="modal fade m-auto shadow-lg" id="example2Modal" tabindex="-1" role="dialog" aria-labelledby="example2ModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered " role="document" style="margin: auto; ">
+      <div class="modal-content" style="padding-top: 15px;">
+        <div class="modal-header " style="align-items: center; align-self: center; display: flex;">
+            <h1 class="modal-title " id="modal-basic-title" style="font-family: cursive; opacity: 80%;" >Add announcement</h1>
+           </div>
+          
+           
+          <div class="modal-body" style="margin: 20px;" >
+            
+            <form class="form-card" >
+              <div class="row justify-content-between text-left">
+                <div class="form-group col-sm-6 flex-column d-flex" style="padding-top: 5px;"> 
+                  <label class="form-control-label px-3">Center name<span class="text-danger"> *</span></label> 
+                  <input type="text" name="" id="" formControlName="centerName" class="form-control">             
+                </div>
+                <div class="form-group col-sm-6 flex-column d-flex"> 
+                  <label class="form-control-label px-3">Center email<span class="text-danger"> *</span></label> 
+                  <input type="email" name="" id="" formControlName="centerEmail" class="form-control">             
+                </div>
+            </div>
+              <div class="row justify-content-between text-left">
+                  <div class="form-group col-sm-6 flex-column d-flex" style="padding-top: 5px;"> 
+                    <label class="form-control-label px-3">Number phone<span class="text-danger"> *</span></label> 
+                    <input type="number" name="" id="" formControlName="phoneNumber" class="form-control">             
+                  </div>
+                  <div class="form-group col-sm-6 flex-column d-flex"> 
+                    <label class="form-control-label px-3">Job title<span class="text-danger"> *</span></label> 
+                    <input type="text" name="" id="" formControlName="jobTitle" class="form-control">             
+                  </div>
+              </div>
+              <div class="row justify-content-between text-left">
+                  <div class="form-group col-sm-6 flex-column d-flex" > 
+                    <label class="form-control-label px-3">Domain<span class="text-danger"> *</span></label> 
+                    <input type="text" name="" id="" formControlName="domain" class="form-control">             
+                  </div>
+                  <div class="form-group col-sm-6 flex-column d-flex"> 
+                    <label class="form-control-label px-3">Work place<span class="text-danger"> *</span></label> 
+                    <input type="text" name="" id="" formControlName="workPlace" class="form-control">             
+                  </div>
+              </div>
+              
+              <div class="row justify-content-between text-left">
+                <div class="form-group col-sm-6 flex-column d-flex" > 
+                  <label class="form-control-label px-3">Required Languages<span class="text-danger"> *</span></label> 
+                  <input type="text" name="" id="" formControlName="courseName" class="form-control">             
+                </div>
+                <div class="form-group col-sm-6 flex-column d-flex"> 
+                  <label class="form-control-label px-3">Experience<span class="text-danger"> *</span></label> 
+                  <input type="text" name="" id="" formControlName="experience" class="form-control">             
+                </div>
+            </div>
+            <div class="row justify-content-between text-left">
+              <div class="form-group col-sm-6 flex-column d-flex"> 
+                <label class="form-control-label px-3">Salary<span class="text-danger"> *</span></label>
+                <input type="text" name="" id="" formControlName="salary" class="form-control">             
+                </div>
+          </div>
+          <label class="form-control-label px-3">Description<span class="text-danger"> *</span></label>
+            <textarea name="" id="" class="form-control" style="height: 108px; border-radius: 20px;"></textarea>
+          </form>
+                </div>
+          
+          <div class="modal-footer" style="padding-top: 15px; align-self: center; align-items: center;
+          display: flex; padding-bottom: 5px;">
+           <div class="row justify-content-end">
+            <button type="submit" data-dismiss="modal" class="btn-block btn-info"style="border-radius: 20px;">close</button> 
+        </div>
+          <div class="row justify-content-end">
+             <button type="submit" class="btn-block btn-success" style="border-radius: 20px;">Add</button> 
+        </div>
+       
+            
+         
+          
+             </div>
+            
+      </div>
+    </div>
+  </div>
+  
+  
+
+  
+</main>
+
