--- a/src/app/pages/home-student/home-student.component.html
+++ b/src/app/pages/home-student/home-student.component.html
@@ -1,3 +1,4 @@
+<!----
 <mat-drawer-container class="example-container"  autosize >
   <mat-drawer #drawer class="example-sidenav" mode="side" [opened]="true" style="padding-top: 70px;">
     
@@ -42,7 +43,7 @@
   
   
 
-      <!--add-->
+
       <div class="col-lg-12 mt-5 ">
       <div class=" sectionCenter">
       
@@ -107,7 +108,7 @@
                   
               </div>
           </div>
-      <!--barre de recherche-->
+
           <div class="createPost col-lg-12" style="margin-top: 70px;">
               <div class="input">
                   <div class="globalRoundProfile" style="background-image: url(../../../assets/img/use1.png);">
@@ -139,7 +140,7 @@
   </div>
 
 
-  <!--carrousel-->
+
   
   <div class="card " style=" align-items: center;
   align-self: center; display: flex; background-color:aliceblue ; border: none; padding-top: 70px; margin:auto;">
@@ -181,32 +182,6 @@
 </div>
 </div>
 
- <!--<ngb-carousel *ngIf="images" [showNavigationArrows]="showNavigationArrows" 
- [showNavigationIndicators]="showNavigationIndicators"  >
- 
-   <ng-template ngbSlide *ngFor="let slide of courses" style="padding: auto;">
-     
-    
-  <div class="container" style="align-items: center; align-self: center;">
-       
-   
-       
-        <div class="row mt-5 m-auto" >
-            <div class="col-lg-3 mb-5 " *ngFor="let cs of slide">
-                <div class="box shadow-sm mr-4 ml-4" style="background-color: #fff;">
-                    <img srcset="{{cs.image}}" width="100%">
-                    <h4 class="mt-2">{{cs.name}}</h4>
-                    <p clas="mt-2">{{cs.description}}</p>
-                    <button class="btn btn-dark btn-sm mt-2" routerLink="{{cs.linkpage}}">Enroll now</button>
-                </div>
-    
-            </div>
-        </div>
-   </div>
-   </ng-template>
-   
- </ngb-carousel>
--->
  
  <hr>
  </div>
@@ -270,3 +245,229 @@
   </div>
 
 </mat-drawer-container>
+-->
+<nav class="menu" tabindex="0" style="padding-top: 60px;">
+	<div class="smartphone-menu-trigger"></div>
+  <header class="avatar">
+		<img  src="../../../assets/img/user4.jpg" />
+    <h2>{{studentAuthService.loggedUser}}</h2>
+  </header>
+	<ul>
+    <li tabindex="0" class="icon-messages"><span style="font-size: medium; color: #261d51; font-weight: bold;margin-left: 15%;">Messages</span></li>
+   <hr>
+    <li tabindex="0" class="icon-calendar"><span style="font-size: medium; color: #261d51; font-weight:bold;margin-left: 15%;">Events</span></li>
+    <hr>
+    <li tabindex="0" class="icon-suggestions"><span style="font-size: medium; color: #261d51;font-weight:bold;margin-left: 15%;">Suggestions</span></li>
+    <hr>
+    <li tabindex="0" class="icon-prof" style="margin-left: 15%;"><span style="font-size: medium; color: #261d51;font-weight:bold;margin-left: 15%;">Prof</span></li>
+    <li tabindex="0" class="icon-courses" style="margin-left: 15%;"><span style="font-size: medium; color: #261d51;font-weight:bold;margin-left: 15%;">Courses</span></li>
+  
+  </ul>
+
+</nav>
+
+<main style="background-color: #fafafa; height: 100%; padding-left: 20%; padding-right: 2%;">
+  
+
+        <!--add-->
+        <div class="col-lg-12 mt-5 "  >
+          <div class=" sectionCenter">
+          
+              <div class="story">
+                  <div class="cover">
+                      <div class="create">
+                          <div class="svg">
+                            <img src="../../../assets/img/svg/plusWhite.svg" alt="Create Story" style="cursor:pointer;" routerLink="favoriteStudent" >
+                          </div>
+                          <h3></h3>
+                      </div>
+                      <div class="bg" style="background-color: rgba(255, 255, 255, 0.2);">
+                          <span></span>
+                      </div>
+                  </div>
+          
+                  <div class="cover" style="align-items: center;align-self: center;display: flex;"  *ngFor="let c of coursesf">
+                    <div class="pro">
+                        <img class="globalRoundProfile" srcset="data:image/png;base64,{{c.picture}}">
+                    </div>
+                    <h2 class="text-center">{{c.formerName}}</h2>
+                    <h3><i class="fa fa-book" style="color: #261d51;"> </i>&nbsp;{{c.courseName}}</h3>
+                    <div class="bg" style="background-color: rgba(255, 255, 255, 0.2);">
+                        <span></span>
+                    </div>
+                </div>
+          <!----
+                <div class="cover" style="align-items: center;align-self: center;display: flex;">
+                    <div class="pro">
+                        <div class="globalRoundProfile" style="background-image: url(../../../assets/img/img2.jpg);"></div>
+                    </div>
+                    <h2 class="text-center">User Name</h2>
+                    <h3><i class="fa fa-book" style="color: #261d51;"> </i>&nbsp;course name</h3>
+                    <div class="bg" style="background-color: rgba(255, 255, 255, 0.2);">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="cover" style="align-items: center;align-self: center;display: flex;">
+                    <div class="pro">
+                        <div class="globalRoundProfile" style="background-image: url(../../../assets/img/img3.jpg);"></div>
+                    </div>
+                    <h2 class="text-center">User Name</h2>
+                    <h3><i class="fa fa-book" style="color: #261d51;"> </i>&nbsp;course name</h3>
+                    <div class="bg" style="background-color: rgba(255, 255, 255, 0.2);">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="cover" style="align-items: center;align-self: center;display: flex;">
+                    <div class="pro">
+                        <div class="globalRoundProfile" style="background-image: url(../../../assets/img/img5.jpg);"></div>
+                    </div>
+                    <h2 class="text-center">User Name</h2>
+                    <h3><i class="fa fa-book" style="color: #261d51;"> </i>&nbsp;course name</h3>
+                    <div class="bg" style="background-color: rgba(255, 255, 255, 0.2);">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="cover" style="align-items: center;align-self: center;display: flex;">
+                    <div class="pro">
+                        <div class="globalRoundProfile" style="background-image: url(../../../assets/img/img6.jpg);"></div>
+                    </div>
+                    <h2 class="text-center">User Name</h2>
+                    <h3><i class="fa fa-book" style="color: #261d51;"> </i>&nbsp;course name</h3>
+                    <div class="bg" style="background-color: rgba(255, 255, 255, 0.2);">
+                        <span></span>
+                    </div>
+                </div>--->
+              </div>
+          <!--barre de recherche-->
+              <div class="createPost col-lg-12" style="margin-top: 150px;">
+                  <div class="input">
+                      <div class="globalRoundProfile" style="background-image: url(../../../assets/img/user4.jpg);">
+                          <span></span>
+                      </div>
+                      <div class="post"  >
+                          <form class="d-flex" >
+                              <input class="form-control me-2" type="search" placeholder="Are you looking for a prof ?" aria-label="Search" style="
+                              border-top-left-radius: 20px; border-bottom-left-radius: 20px; color: black;">
+                               <button type="submit" class="btn btn-light pull-right " style=" color:#fff; font-weight: bold; padding-left: 10px;
+                               padding-right: 10px;   border-top-right-radius: 20px;
+                               border-bottom-right-radius: 20px; background-color: #261d51;" ><i class="bi bi-search"></i></button>
+                            </form>
+                      </div>
+                  </div>
+          <div style="padding-top: 50px;">
+          </div>
+               
+          </div>       
+       
+  
+  
+  
+  
+         
+      </div>
+      
+      </div>
+
+
+      <div class="container shadow-lg" style="padding-top: 10px;background-color: #fff;">
+        <h1 class="text-center"><strong>All Courses in your city and among your favourites categories</strong></h1>
+          
+          <div class="row mt-5" >
+              <div class="col-lg-4 mb-5" *ngFor="let c of courses">
+                
+        <div class="card card-one">
+          <div class="multi-button">
+            <button class="fas fa-heart"></button>
+            <button class="fas fa-star" type="button" (click)="favorite(c.id)"></button>
+          </div>
+          <header>
+            <div class="avatar">
+              <img srcset="data:image/png;base64,{{c.picture}}"  alt="Jhon Doe" />
+            </div>
+          </header>
+      
+          <h3>{{c.formerName}}</h3>
+          <div class="desc " style="font-weight:bold; font-size: large; opacity:90%;">
+            <i class="fa fa-book"></i>
+            {{c.courseName}}</div>
+          <div class="contacts" style="display: block;">
+            <a href=""><i class="fa fa-location-arrow"></i><span style="margin-left:10px;">{{c.city}}</span></a>
+            <a href=""><i class="fa fa-phone"></i><span style="margin-left:10px;" >{{c.phoneNumber}}</span></a>
+            <a href=""><i class="fa fa-envelope"></i><span style="margin-left:10px;">{{c.formerEmail}}</span></a>
+            <div class="clear"></div>
+          </div>
+      
+          <footer>
+            <a href=""><i class="fab fa-facebook"></i></a>
+            <a href=""><i class="fab fa-linkedin"></i></a>
+            <a href=""><i class="fab fa-twitter"></i></a>
+            <a href=""><i class="fab fa-instagram"></i></a>
+          </footer>
+        </div>
+    </div>
+          </div>
+      
+      </div>
+    
+      
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+<div class="container shadow-lg" style="margin-top: 10px; padding-top: 10px; ">
+<div class="hero-section container " style="margin-top: 10px; padding-top: 10px; ">
+  <div class="card-grid">
+    <a class="card1 shadow-sm"  (click)="clicklink('Sousse')"  style="border-radius: 27px; border: none;">
+      <div class="card__background" style="background-image: url(../../../assets/img/sousse.jpg)"></div>
+      <div class="card__content">
+        <p class="card__category">City</p>
+        <h3 class="card__heading">Sousse</h3>
+      </div>
+    </a>
+    <a class="card1 shadow-sm"  (click)="clicklink('Monastir')"  style="border-radius: 27px; border: none;">
+      <div class="card__background" style="background-image: url(../../../assets/img/monastir.jpg)"></div>
+      <div class="card__content">
+        <p class="card__category">City</p>
+        <h3 class="card__heading">Monastir</h3>
+      </div>
+    </a>
+
+    <a class="card1 shadow-sm"  (click)="clicklink('Nabeul')"  style="border-radius: 27px; border: none;">
+      <div class="card__background" style="background-image: url(../../../assets/img/nabeul.jpg)"></div>
+      <div class="card__content">
+        <p class="card__category">City</p>
+        <h3 class="card__heading">Nabeul</h3>
+      </div>
+    </a>
+    <a class="card1 shadow-sm" (click)="clicklink('sfax')"  style="border-radius: 27px; border: none;">
+      <div class="card__background "style="background-image: url(../../../assets/img/sfax.jpg)"></div>
+      <div class="card__content">
+        <p class="card__category">City</p>
+        <h3 class="card__heading">sfax</h3>
+      </div>
+    </a>
+  <div>
+  </div>
+</div>
+  
+</div>
+<hr>
+<div style="margin: auto; padding-bottom: 20px;" class="container m-5 " >
+    <h1>Other cities</h1>
+<mat-chip-list aria-label="Fish selection">
+      
+    
+    <mat-chip color="primary" selected style="background-color: #261d51;"(click)="clicklink('Ben Arous')"  >Ben Arous</mat-chip>
+    <mat-chip color="accent" selected style="background-color: #261d51;" (click)="clicklink('Manouba')" >Manouba</mat-chip>
+    <mat-chip selected style="background-color: #261d51;" (click)="clicklink('Tunis')" >Tunis</mat-chip>
+    <mat-chip selected style="background-color: #261d51;" (click)="clicklink('Ariana')" >Ariana</mat-chip>
+    <mat-chip color="primary" selected style="background-color: #261d51;" (click)="clicklink('Mahdia')">Mahdia</mat-chip>
+    <mat-chip  selected style="background-color: #261d51;" (click)="clicklink('Jendouba')" >Jendouba</mat-chip>
+    <mat-chip selected style="background-color: #261d51;" (click)="clicklink('El kef')" >El kef</mat-chip>
+    <mat-chip style="background-color: #261d51;" selected (click)="clicklink('Tataouine')" >Tataouine</mat-chip>
+    <mat-chip  selected style="background-color: #261d51;" (click)="clicklink('Tozeur')" >Tozeur</mat-chip>
+    <mat-chip selected style="background-color: #261d51;" (click)="clicklink('Gabès')"  >Gabès</mat-chip>
+    
+  </mat-chip-list>
+</div>
+</div>
+
+      
+</main>
