--- a/src/app/pages/mycourses/mycourses.component.html
+++ b/src/app/pages/mycourses/mycourses.component.html
@@ -87,7 +87,7 @@
 <section class="course" style="padding-top: 80px;">
   
    <div class="container">
-     <h1 class="text-center"><strong>All Courses</strong></h1>
+     <h1 class="text-center"><strong>My Courses</strong></h1>
        
        <div class="row mt-5" >
            <div class="col-lg-4 mb-5" *ngFor="let c of courses">
