--- a/src/app/pages/updateprofile/updateprofile.component.html
+++ b/src/app/pages/updateprofile/updateprofile.component.html
@@ -90,7 +90,7 @@
                 <div class="col-lg-12" style="display: flex; align-items: center; justify-content: center; "  >
                     
                 
-                    <img src="../../../assets/img/use1.png" width="100%" class="gha" >
+                    <img src="../../../assets/img/user4.jpg" width="100%" class="gha" >
                     
                     
                 
