--- a/src/app/pages/category/mathematique/mathematique.component.css
+++ b/src/app/pages/category/mathematique/mathematique.component.css
@@ -258,3 +258,152 @@ body {
   width: 10rem;
   height: 10rem;
 }
+
+.clear {
+  clear: both;
+}
+
+/*** CARD STLES ***/
+.cards-container {
+  width: 793px;
+  max-width: 100%;
+  margin: 2rem auto;
+}
+
+.card {
+  float: left;
+  margin: 3rem;
+}
+
+ .date {
+  width: 100%;
+  opacity: .7;
+  text-align: center;
+}
+
+.card-two {
+  position: relative;
+  width: 300px;
+  background: #fff;
+  box-shadow: 0 10px 7px -5px rgba(0, 0, 0, 0.4);
+}
+.card-two header {
+  position: relative;
+  width: 100%;
+  height: 60px;
+  background-color: darkgray;
+}
+.card-two header::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: inherit;
+  transform: skewY(8deg);
+  transform-origin: 0 100%;
+}
+
+
+.card-two h2 {
+  position: relative;
+  margin: 20px 0 10px;
+  text-align: center;
+  color: #777;
+}
+.card-two h2::after {
+  content: "";
+  position: absolute;
+  bottom: -15px;
+  left: 50%;
+  margin-left: -15px;
+  width: 30px;
+  height: 1px;
+  background: #000;
+}
+.card-two .desc {
+  padding: 0 3rem 2rem;
+  text-align: center;
+  line-height: 2;
+  color: #777;
+}
+.card-two .contacts {
+  width: 200px;
+  max-width: 100%;
+  margin: 0 auto 3.5rem;
+}
+.card-two .contacts a {
+  display: block;
+  float: left;
+  width: 100%;
+  color: #261d51;
+  margin-bottom: 10px;
+}
+.card-two .contacts a:hover {
+  color: #333;
+}
+.card-two .contacts a:hover .fa::before {
+  color: #fff;
+}
+.card-two .contacts a:hover .fa::after {
+  top: 0;
+}
+.card-two .contacts a .fa {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  line-height: 39px;
+  overflow: hidden;
+  text-align: center;
+  border: 2px solid #261d51;
+  border-radius: 50%;
+  
+  vertical-align: middle;
+}
+.card-two .contacts a .fa:before {
+  position: relative;
+  z-index: 1;
+}
+.card-two .contacts a .fa::after {
+  content: "";
+  position: absolute;
+  top: -50px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: top 0.3s;
+  background: #261d51;
+}
+.card-two .contacts a:last-of-type .fa {
+  line-height: 36px;
+}
+.card-two footer {
+  position: relative;
+  height: 45px;
+  background-color: #6573d0;
+  text-align: center;
+}
+
+.card-two footer::before {
+  z-index: 0;
+  content: "";
+  position: absolute;
+  top: 0px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: inherit;
+  transform: skewY(8deg);
+  transform-origin: 100%;
+}
+
+
+/*** RESPONSIVE ***/
+@media only screen and (max-width: 810px) {
+  .card {
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
