--- a/src/app/pages/image/image.component.css
+++ b/src/app/pages/image/image.component.css
@@ -1,120 +1,60 @@
-*,
-      *::after,
-      *::before {
-        margin: 0;
-        padding: 0;
-        box-sizing: inherit;
-      }
-      .second
-      {
-          
-          height: 400px;
-          width: auto;
-          margin: auto;
-          border-radius: 40px;
-      }
-      .first {
-          padding-top: 10px;
-        width: 25rem;
-        height: 100%;
-        margin: 0 1rem;
-        position: relative;
-         
-      }
-      .high2{
-        
-        font-size: 35px;
-        color:#000000;
-        margin-left: 80px;
-        
-      }
-      .high3{
-        font-weight: bold;
-        font-style: italic;
-        font-size: larger;
-        text-decoration: underline;
-        color: #eeeeee;
-      }
-      .searchbar {
-        font-size: 2.4rem;
-        width: 25rem;
-        height: 5rem;
-        border: none;
-        outline: none;
-        border-radius: 10rem;
-        padding: 2rem;
-        transition: all 0.1s;
-        transition-delay: 0.1s;
-        background-color:#261d51;
-        opacity: 80%;
-        
-      }
-      input::placeholder{
-          color: #fff;
-      }
-      img{
-        color: #fff;  
-      }
-      .searchbar:hover {
-        width: 27rem;
-        height: 6rem;
-      }
-      .button {
-        height: 2rem;
-        position: absolute;
-        top: 2.2rem;
-        right: 1rem;
-        transition: all 0.1s;
-        transition-delay: 0.1s;
-        color: #fff;
-      }
-      .button:hover {
-        cursor: pointer;
-      }
-      .searchbar:hover + .button {
-        height: 2.5rem;
-        top: 1.8rem;
-        right: 0;
-      }
-     
-      
+.gauche{
+  font-weight: bolder;
+  font-size:16px;
+}
+.droite {
+  font-size: 16px;
+}
+body{
+  margin-top:20px;
+  color: #1a202c;
+  text-align: left;
+  background-color: #e2e8f0;
+}
+.main-body {
+  padding: 15px;
+}
+.card {
+  box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+}
 
-      .course
-      {
-          background-color: #eff6ff;
-          padding: 50px 100px;
-      }
-      .gha{
-          border-radius: 100%;
-      }
-      .box
-      {
-          border-radius: 20px;
-          background-color: #ffffff;
-          padding: 10px 20px;
-      }
-      .btn{
-          padding-left: 5px;
-          border-radius: 20px;
-          background-color: #261d51;
-          
-      }
-      @media screen and (max-width:600px)
-      {
-          .course
-      {
-          background-color: #eff6ff;
-          padding: 50px 10px;
-      }
-      }
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 0 solid rgba(0,0,0,.125);
+  border-radius: .25rem;
+}
 
-      
-      .gha{
-        height: 140px;
-        width: 140px;
-        border-radius: 50%;
-        padding: 3px;
-        background:var(--primary-color);
-        
-      }
-      
+.card-body {
+  flex: 1 1 auto;
+  min-height: 1px;
+  padding: 1rem;
+}
+
+.gutters-sm {
+  margin-right: -8px;
+  margin-left: -8px;
+}
+
+.gutters-sm>.col, .gutters-sm>[class*=col-] {
+  padding-right: 8px;
+  padding-left: 8px;
+}
+.mb-3, .my-3 {
+  margin-bottom: 1rem!important;
+}
+
+.bg-gray-300 {
+  background-color: #e2e8f0;
+}
+.h-100 {
+  height: 100%!important;
+}
+.shadow-none {
+  box-shadow: none!important;
+}
